namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-jobs-board-integration-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-jobs-board-integration-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "prison-education"
    cloud-platform.justice.gov.uk/slack-alert-channel: "prison-education-alerts"
    cloud-platform.justice.gov.uk/application: "Jobs Board Integration"
    cloud-platform.justice.gov.uk/owner: "Education Skills Work and Employment: managing.eswe@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-jobs-board-integration-api.git"
    cloud-platform.justice.gov.uk/team-name: "education-skills-work-employment"
